# free-claude-code

./: .env.example  CUSTOM_FEATURES.md  PLAN.md  README.md  SETUP_COMPLETE.md  claude-free.bat  ecosystem.config.js  monitor-proxy.bat  nvidia_nim_models.json  pyproject.toml  server.py  start-server.ps1  start-with-monitor.bat
api/: app.py  custom_routes.py  dependencies.py  detection.py  optimization_handlers.py  request_utils.py  routes.py
cli/: manager.py  parser.py  process_registry.py  session.py
config/: logging_config.py  nim.py  settings.py
fork/: claude-free
messaging/: __init__.py  base.py  discord.py  discord_markdown.py  event_parser.py  factory.py  handler.py  limiter.py  session.py  telegram.py  telegram_markdown.py  transcript.py  transcription.py  tree_data.py  tree_processor.py  tree_queue.py  tree_repository.py
providers/: __init__.py  base.py  logging_utils.py  nvidia_mixins.py  nvidia_nim.py  rate_limit.py
scripts/: sync_readme.py
tests/: conftest.py  test_api.py  test_app_lifespan_and_errors.py  test_cli.py  test_cli_manager_edge_cases.py  test_config.py  test_converter.py  test_dependencies.py  test_discord_platform.py  test_error_mapping.py  test_event_parser.py  test_extract_text.py  test_handler.py  test_handler_context_isolation.py  test_handler_format.py  test_handler_integration.py  test_handler_markdown_and_status_edges.py  test_limiter.py  test_lmstudio.py  test_logging_config.py  test_messaging.py  test_messaging_factory.py  test_model_utils.py  test_nvidia_nim.py  test_open_router.py  test_parsers.py  test_process_registry.py  (+21 more)
(+25 files in other folders)
